1 统一风格;2.增加列表页

--- a/index.html
+++ b/index.html
@@ -16,20 +16,18 @@
         <div id="header" class="header">
             <div class="row tool-bar">
                 <div class="logo">
-                    <a class="icon" href="/#/"></a>
+                    <a class="icon" href="/#/">Boston Global Education</a>
                 </div>
-                <div class="login-status">
-                    <div class="">
-                        <a class="" href="/#/sign_in" id="signInBtn">Sign In</a>
-                        |
-                        <a class="" href="/#/sign_up" id="signUpBtn">Sign Up</a>
-                    </div>
-                    <div class="hiding">
-                        <a class="" href="/#/i"  id="currentUserName"></a>
-                        |
-                        <a href="javascript:;" id="logoutBtn">Log Out</a>
-                    </div>
-                </div>
+
+
+                <ul class="nav nav-justified">
+                    <li class="active"><a href="/#/info_list">Infomation</a></li>
+                    <li><a href="#">SVN</a></li>
+                    <li><a href="#">iOS</a></li>
+                    <li><a href="#">VB.Net</a></li>
+                    <li><a href="/#/sign_in">Sign In</a></li>
+                    <li><a href="#/Sign_up">Sign Up</a></li>
+                </ul>
             </div>
         </div>
         <div class="header"></div>
